[package]
name = "zotero"
version = "0.0.2-alpha"
authors = ["eonm <eon.mathis@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Communicate with Zotero API"
repository = "https://github.com/Eonm/zotero"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.9.22"
serde_derive = "1.0.101"
serde_json = "1.0.41"
serde = "1.0.101"
derive_builder = "0.8.0"
url = "2.1.0"