[package]
name = "zotero"
version = "0.0.2"
authors = ["eonm <eon.mathis@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Communicate with Zotero API"
repository = "https://github.com/Eonm/zotero"
keywords = ["zotero", "digital-humanities", "citations", "zotero-api"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.9.24"
serde_derive = "1.0.104"
serde_json = "1.0.44"
serde = "1.0.104"
derive_builder = "0.9.0"
url = "2.1.0"