[workspace]
members = [ "zotero_data", "zotero_derive", "zotero_api"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/Eonm/zotero"
authors = [
    "ju6ge <judge@felixrichter.tech>",
    "enom <eon.mathis@gmail.com>"
]
keywords = ["zotero", "digital-humanities", "citations", "zotero-api"]
license = "MIT"

[workspace.dependencies]
chrono = { version = "0.4.23", features = ["serde"] }
url = "2.2.2"
derive_builder = "0.11.2"
regex = "1.7.0"
serde_json = "1.0.85"
serde = { version = "1.0.144", features = ["derive"] }
once_cell = "1.18.0"
zotero_derive = { path = "zotero_derive" }
zotero_data = { path = "zotero_data" }

[workspace.metadata.release]
publish = true
tag-prefix = ""
