[package]
name = "zotero"
version = "0.0.2"
authors = ["eonm <eon.mathis@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Communicate with Zotero API"
repository = "https://github.com/Eonm/zotero"
keywords = ["zotero", "digital-humanities", "citations", "zotero-api"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.11", features = ["blocking", "json"] }
serde_json = "1.0.85"
serde = { version = "1.0.144", features = ["derive"] }
derive_builder = "0.11.2"
url = "2.2.2"
zotero_derive = { path = "../zotero_derive" }
hyperx = { version = "1.4.0", features = ["headers"] }
chrono = { version = "0.4.23", features = ["serde"] }
regex = "1.7.0"
