[package]
name = "zotero_api"
description = "Communicate with Zotero API"
version.workspace = true
edition.workspace = true
readme.workspace = true
repository.workspace = true
#publish.workspace = true
authors.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zotero_data = { workspace = true }
reqwest = { version = "0.11.11", features = ["blocking", "json"] }
serde_json = { workspace = true }
serde = { workspace = true }
derive_builder = { workspace = true }
url = { workspace = true }
zotero_derive = { workspace = true }
hyperx = { workspace = true }
chrono = { workspace = true }
regex = { workspace = true }
once_cell = { workspace = true }
