[package]
name = "zotero_api"
description = "Communicate with Zotero API"
version.workspace = true
edition.workspace = true
readme.workspace = true
repository.workspace = true
#publish.workspace = true
authors.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zotero_data = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
derive_builder = { workspace = true }
url = { workspace = true }
zotero_derive = { workspace = true }
chrono = { workspace = true }
regex = { workspace = true }
once_cell = { workspace = true }
http = "0.2.9"
bytes = { version = "1.5.0", features = ["serde"] }

[dev-dependencies]
reqwest = { version = "0.11.11", features = ["blocking", "json"] }
tokio = { version = "1.33.0", features = ["full"] }
