[package]
name = "zotero_data"
description = "Zotero Data Structures"
version.workspace = true
edition.workspace = true
readme.workspace = true
repository.workspace = true
#publish.workspace = true
authors.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = { workspace = true }
serde = { workspace = true }
derive_builder = { workspace = true }
zotero_derive = { workspace = true }
chrono = { workspace = true }
regex = { workspace = true }
once_cell = { workspace = true }
